--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <hr>
 
     <h3><a href="./public/anime_ranking.html">Anime Ranking Project</a></h3>
-    <img src="./assets/images/anime_ranking.png/" height="200" alt="">
+    <img src="./assets/images/anime_ranking.png" height="200" alt="">
 
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthday_cake.png" height="200" alt=""><br>
